Finished sections, Landing, Books, Sellers, Athors, Categories

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -196,6 +196,131 @@
                 </p>
             </div>
         </section>
+
+
+        <!-- Best Sellers -->
+        <section class="section-best-seller">
+            <div class="seller-wrap-sticky">
+                <div class="best-seller-wrap">
+                    <div class="best-seller-text">
+                        <h2>Best Sellers</h2>
+                        <p>Top Reads: Discover Your Next Favorite Bestseller!</p>
+                    </div>
+                    <a href="" class="best-seller-book">
+                        <div class="seller-book-img">
+                            <img src="https://images.unsplash.com/photo-1535905557558-afc4877a26fc?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                                alt="" class="img-f">
+                        </div>
+                        <h2>Titulo</h2>
+                    </a>
+                    <a href="" class="best-seller-book">
+                        <div class="seller-book-img">
+                            <img src="https://images.unsplash.com/photo-1535905557558-afc4877a26fc?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                                alt="" class="img-f">
+                        </div>
+                        <h2>Titulo</h2>
+                    </a>
+                    <a href="" class="best-seller-book">
+                        <div class="seller-book-img">
+                            <img src="https://images.unsplash.com/photo-1535905557558-afc4877a26fc?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                                alt="" class="img-f">
+                        </div>
+                        <h2>Titulo</h2>
+                    </a>
+                    <a href="" class="best-seller-book">
+                        <div class="seller-book-img">
+                            <img src="https://images.unsplash.com/photo-1535905557558-afc4877a26fc?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                                alt="" class="img-f">
+                        </div>
+                        <h2>Titulo</h2>
+                    </a>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- Authors -->
+        <section class="section-authors">
+            <div>
+                <a href="" class="section-authors-item">
+                    <img src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cGVvcGxlfGVufDB8fDB8fHww"
+                        alt="" class="img-f">
+                    <span>Nombre</span>
+                </a>
+                <a href="" class="section-authors-item">
+                    <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8cGVvcGxlfGVufDB8fDB8fHww"
+                        alt="" class="img-f">
+                    <span>Nombre</span>
+                </a>
+                <a href="" class="section-authors-item">
+                    <img src="https://images.unsplash.com/photo-1539571696357-5a69c17a67c6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8cGVvcGxlfGVufDB8fDB8fHww"
+                        alt="" class="img-f">
+                    <span>Nombre</span>
+                </a>
+                <a href="" class="section-authors-item">
+                    <img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8cGVvcGxlfGVufDB8fDB8fHww"
+                        alt="" class="img-f">
+                    <span>Nombre</span>
+                </a>
+                <a href="" class="section-authors-item">
+                    <img src="https://images.unsplash.com/photo-1488161628813-04466f872be2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHBlb3BsZXxlbnwwfHwwfHx8MA%3D%3D"
+                        alt="" class="img-f">
+                    <span>Nombre</span>
+                </a>
+            </div>
+        </section>
+
+
+        <!-- Categories -->
+        <section class="section-categories">
+            <section class="section-categories-title">
+                <span>C</span>
+                <span>A</span>
+                <span>T</span>
+                <span>E</span>
+                <span>G</span>
+                <span>O</span>
+                <span>R</span>
+                <span>I</span>
+                <span>E</span>
+                <span>S</span>
+            </section>
+            <section class="section-categories-items">
+                <a href="">
+                    <span>Nombre</span>
+                    <img src="https://images.unsplash.com/photo-1643281490538-560e55e6f3ca?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8Y2F0ZWdvcmllc3xlbnwwfHwwfHx8MA%3D%3D"
+                        alt="" class="img-f">
+                </a>
+                <a href="">
+                    <span>Nombre</span>
+                    <img src="https://plus.unsplash.com/premium_photo-1661407296118-4c2067a49170?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8Y2F0ZWdvcmllc3xlbnwwfHwwfHx8MA%3D%3D"
+                        alt="" class="img-f">
+                </a>
+                <a href="">
+                    <span>Nombre</span>
+                    <img src="https://images.unsplash.com/photo-1643473232037-08736b56178d?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8Y2F0ZWdvcmllc3xlbnwwfHwwfHx8MA%3D%3D"
+                        alt="" class="img-f">
+                </a>
+                <a href="">
+                    <span>Nombre</span>
+                    <img src="https://plus.unsplash.com/premium_photo-1683133640706-5cab507d216c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8Y2F0ZWdvcmllc3xlbnwwfHwwfHx8MA%3D%3D"
+                        alt="" class="img-f">
+                </a>
+                <a href="">
+                    <span>Nombre</span>
+                    <img src="https://images.unsplash.com/photo-1651241956991-83b75dde3dc1?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8Y2F0ZWdvcmllc3xlbnwwfHwwfHx8MA%3D%3D"
+                        alt="" class="img-f">
+                </a>
+                <a href="">
+                    <span>Nombre</span>
+                    <img src="https://images.unsplash.com/photo-1553029230-2be4f5c23de8?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fGNhdGVnb3JpZXN8ZW58MHx8MHx8fDA%3D"
+                        alt="" class="img-f">
+                </a>
+            </section>
+        </section>
+
+
+
 
 
     </main>
