Added the footer, corrected the main nav, finalized the landing and added the books page.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
                 <div id="nav-links" class="nav-links">
                     <li>
-                        <a href="">Books</a>
+                        <a href="./books.html">Books</a>
                     </li>
                     <li>
                         <a href="">Manage Books</a>
@@ -318,15 +318,28 @@
                 </a>
             </section>
         </section>
-
-
-
-
-
     </main>
 
-    <footer>
-
+    <footer class="footer">
+        <h2>InkEchoes</h2>
+        <div class="footer-social">
+            <span>Social Networks</span>
+            <ul>
+                <li>
+                    <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                </li>
+                <li>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                </li>
+                <li>
+                    <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                </li>
+                <li>
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                </li>
+            </ul>
+        </div>
+        <span>&copy; 2024 InkEchoes</span>
     </footer>
 
     <script src="./js/home.js" type="module"></script>
